# CausalSynth

./: .gitignore  README.md  __init__.py  config.py  pyproject.toml
api/: routes.py
causalsynth/: cli.py  exceptions.py
causalsynth/api/: __init__.py  server.py
causalsynth/dag/: loader.py
causalsynth/generation/: privacy.py
causalsynth/scm/: noise.py
causalsynth/validation/: __init__.py  report.py
dag/: __init__.py  discovery.py  validator.py
data/: __init__.py  schema.py
examples/: generate_health_data.py
generation/: __init__.py  postprocess.py  sampler.py
graph/: __init__.py  visualizer.py
scm/: __init__.py  builder.py  equations.py
tests/: conftest.py  test_cli.py  test_privacy.py  test_sampler.py  test_scm_builder.py  test_validation.py
tests/fixtures/: health_dag.json  real_health_data.csv
validation/: causal.py  statistical.py
